--- a/config.yaml
+++ b/config.yaml
@@ -18,5 +18,5 @@ smb:
   folder: TESTApp
 
 api:
-  url: https://etax.energyabsolute.co.th/api/method/etax_inet.api.etax.sign_etax_document
+  url: https://192.168.242.58/api/method/etax_inet.api.etax.sign_etax_document
   token: d2285083fd972ce:9854a5d7c33828c
