--- a/config.yaml
+++ b/config.yaml
@@ -21,5 +21,5 @@ api:
   # url: https://192.168.242.58/api/method/etax_inet.api.etax.sign_etax_document
   url: https://etax.energyabsolute.co.th/api/method/etax_inet.api.etax.sign_etax_document prod
   # url: https://etax-uat.energyabsolute.co.th/api/method/etax_inet.api.etax.sign_etax_document
-  token: d2285083fd972ce:9854a5d7c33828c prod
+  token: d2285083fd972ce:9854a5d7c33828c
   # token: c748b18630bd8f6:954599aeaa941d7
